[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.urls]
repository = "https://github.com/epicosy/cve2bf"
homepage = "https://github.com/epicosy/cve2bf"

[project]
name="cve2bf"
version = "0.0.1"
description = "Tool for converting CVE reports to Bugs Framework specifications."
readme = "README.md"
authors = [
    {name = "Eduard Pinconschi", email="eduard.pinconschi@tecnico.ulisboa.pt"},
]
keywords = ["tool", "cve analysis", "bugs framework"]
license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
classifiers = [
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers"
]
dependencies = [
    "pandas~=2.2.2",
    "numpy~=1.26.4",
    "tqdm~=4.66.4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "twine>=1.11.0",
    "setuptools>=38.6.0",
    "wheel>=0.31.0",
    "cvss~=3.1.0",
    "cpeparser~=0.0.2"
]


[tool.setuptools.packages.find]
exclude = ["ez_setup", "tests*"]


[tool.setuptools]
include-package-data = false


[project.scripts]
cve2bf = "cve2bf.main:main"